# rag2-vibe-by-claudechat

./: .env.example  .gitignore  README.md  eva  evaluate  log eva  pyproject.toml  test
app/: main.py
app/api/: chat.py  evaluation.py  ingest.py
app/core/: config.py  dependencies.py  logger.py
app/models/: schemas.py
app/services/: evaluation.py  ingestion.py  rag_chain.py  vector_store.py
data/chroma_db/: chroma.sqlite3
data/eval_results/: eval_detail_20260414_083717_fast_weakpc_v2.csv  eval_detail_20260414_084555_full_weakpc_v3.csv  eval_detail_20260414_085156_full_schema_fix_check.csv  eval_detail_20260414_085712_full_fallback_check_v1.csv  eval_detail_20260414_090423_full_weakpc_v4.csv  eval_report_20260414_082036.json  eval_report_20260414_083717_fast_weakpc_v2.json  eval_report_20260414_084555_full_weakpc_v3.json  eval_report_20260414_085156_full_schema_fix_check.json  eval_report_20260414_085712_full_fallback_check_v1.json  eval_report_20260414_090423_full_weakpc_v4.json
data/raw/: gioi_thieu_ai.txt  machine_learning.txt  python_cho_ai.txt  rag_giai_thich.txt  rag_va_llm.txt  sample.txt  test_ingest.txt
frontend/: index.html
scripts/: generate_sample_data.py  run_evaluation.py
tests/: test_api.py
