[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot with local LLM via Ollama"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-ollama>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "ragas>=0.1.14",
    "datasets>=2.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
